solucion punto 3 y documentacion